--- a/index.html
+++ b/index.html
@@ -835,13 +835,13 @@
                 <div class="p-6 bg-gray-800 bg-opacity-30 backdrop-blur-sm rounded-xl border border-purple-500 hover:border-purple-400 transition-all">
                     <h3 class="text-2xl font-bold mb-4 text-purple-300">Getting Started</h3>
                     <p class="mb-4">Learn how to set up and use my open-source tools and frameworks.</p>
-                    <a href="https://yourdocs.com/guides" target="_blank" class="btn inline-block">Read Guide</a>
+                    <a href="./www/ecosystem.html" target="_blank" class="btn inline-block">Read Guide</a>
                 </div>
                 <!-- API Docs -->
                 <div class="p-6 bg-gray-800 bg-opacity-30 backdrop-blur-sm rounded-xl border border-purple-500 hover:border-purple-400 transition-all">
                     <h3 class="text-2xl font-bold mb-4 text-purple-300">API Reference</h3>
                     <p class="mb-4">Detailed documentation for integrating with my services and tools.</p>
-                    <a href="https://api.yourproject.com/docs" target="_blank" class="btn inline-block">View API</a>
+                    <a href="./www/ecosystem.html" target="_blank" class="btn inline-block">View API</a>
                 </div>
                 <!-- GitHub -->
                 <div class="p-6 bg-gray-800 bg-opacity-30 backdrop-blur-sm rounded-xl border border-purple-500 hover:border-purple-400 transition-all">
@@ -853,7 +853,7 @@
                 <div class="p-6 bg-gray-800 bg-opacity-30 backdrop-blur-sm rounded-xl border border-purple-500 hover:border-purple-400 transition-all">
                     <h3 class="text-2xl font-bold mb-4 text-purple-300">Video Tutorials</h3>
                     <p class="mb-4">Step-by-step walkthroughs for building with my tech stack.</p>
-                    <a href="https://youtube.com/@tienthien" target="_blank" class="btn inline-block">Watch Videos</a>
+                    <a href="https://youtube.com/@tienthien196" target="_blank" class="btn inline-block">Watch Videos</a>
                 </div>
             </div>
         </div>
