--- a/Resource/web/a.html
+++ b/Resource/web/a.html
@@ -224,7 +224,7 @@
 
       try {
         // Load .md file qua proxy
-        const proxyUrl = "https://api.allorigins.win/get?url=" + encodeURIComponent(`https://yourusername.github.io${path}`);
+        const proxyUrl = "https://api.allorigins.win/get?url=" + encodeURIComponent(`https://tienthien196.github.io${path}`);
         const res = await fetch(proxyUrl);
         const data = await res.json();
         const markdown = data.contents;
